# MAI

./: README.md
Discran/: README.md
Discran/course_project/: CMakeLists.txt  main.cpp
Discran/lab1/: 1.in  CMakeLists.txt  container.hpp  main.cpp  sort.hpp  test.cpp
Discran/lab2/: CMakeLists.txt  gprof.txt  main.cpp  source.cpp  valgrind.txt
Discran/lab2/patricia/: patricia.cpp  patricia.hpp
Discran/lab4/: CMakeLists.txt  main.cpp  test.cpp
Discran/lab5/: CMakeLists.txt  main.cpp
Discran/lab6/: CMakeLists.txt  main.cpp
Discran/lab7/: CMakeLists.txt  main.cpp
Discran/lab9/: CMakeLists.txt  main.cpp
FuncProg/lab1/: equations.fsx  taylor.fsx
db/lab1/: 28.puml  3.puml
ml/lab1/: Lab1_3.ipynb
numerics/lab8/: main.py
pgp/cp/: Makefile  input.txt  main.cu  report.docx
pgp/cp/converter/: main.py
pgp/cp/graphics/: main.py
pgp/hw1/: main.cpp
pgp/hw2/: main.c
pgp/lab1/: main.c  main.cu  report.docx
pgp/lab2/: main.c  main.cu
pgp/lab3/: main.c  main.cu  report.docx
pgp/lab4/: main.c  main.cu  report.docx
pgp/lab5/: main.cpp  main.cu  report.docx
